# project-digitalization

./: .gitignore  CMakeLists.txt  DEV_ISSUES.md  DEV_NOTES.md  Dockerfile  Makefile  README.md  build.sh  gnrc_border_router.elf  main.c
assets/: network-diagram.drawio
src/: Makefile  README.md  cmd_control.c  cmd_control.h  coap_control.c  coap_control.h  coap_post.c  coap_post.h  config.ini.template  config.ini.tmp  config_constants.h  configuration.c  configuration.h  cpu_temperature.c  cpu_temperature.h  led_control.c  led_control.h  main.c  sensor_mock.c  sensor_mock.h
src/utils/: Makefile  README.md  error_handler.c  error_handler.h  timestamp_convert.c  timestamp_convert.h
websocket/: README.md  coap_request.py  coap_webserver.service  coap_websocket.py  coap_websocket.service  http_websocket.py  raspberry_pi_setup.sh  requirements.txt  send_coap_req.py  update_chat_ids.py  websocket.py
